--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset = "UTF-8">
     <title>317's Code Run Get web</title>
     <script>
-      var currentPath = window.location.pathname;
+      var currentPath = window.location.href;
       console.log("Path: " + currentPath);
     </script>
   </head>
