--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
     <meta charset = "UTF-8">
     <title>317's Code Run Get web</title>
     <script>
-      var currentPath = window.location.href;
-      console.log("Path: " + currentPath);
+      function getQueryParam(param) {
+    // 解析URL参数为对象
+    var queryParams = new URLSearchParams(window.location.search);
+    // 检查参数是否存在
+    if (queryParams.has(param)) {
+        // 获取参数值
+        return queryParams.get(param);
+    }
+    return null;
+}
+ 
+// 使用示例
+var paramValue = getQueryParam('param'); // 假设当前网址是: http://example.com/?param=value
+if (paramValue) {
+    console.log('参数存在，值为:', paramValue);
+} else {
+    console.log('参数不存在');
+}
     </script>
   </head>
   <body>
