--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@ window.onload = function() {
   </head>
   <body>
     <h1>这里可以运行点什么……你说呢？我不知道。</h1>
+    <p id="text-to-change">这里的文字会根据URL参数改变。</p>
   </body>
 </html>
