--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	window.onload = function() {
 	  const modeParam = getQueryParam('mode');
 	  const valueParam = getQueryParam('text');
-	  if (valueParam !=== '' && modeParam === 'text') {
+	  if (valueParam !== '' && modeParam === 'text') {
 	    updatePageText(valueParam);
 	  }
 	  else{
