--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		  if (mode === 'text' && text) {
 	            var textcolor = document.getElementById("modetext");
 		    document.getElementById('modetext').textContent = text;	
-		    if (color){
+		    if (color !== ''){
 			    textcolor.style.color = color;
 		    }
 		  }
