--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div id = "modetext"></div>
 	<script>
 		function setTextColor(text, hexColor) {
-  			return `<h1 style="color: #${hexColor};">${text}</h1>`;
+  			return <h1 style="color: #${hexColor};">${text}</h1>;
 		}
 		function showTextParam() {
 		  const url = new URL(window.location.href);
