--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	          	var textcolor = document.getElementById("modetext");
 			if (colorParam !== null) {
   		    		modetext.style.color = colorParam;
-				document.getElementById('modetext').textContent = setTextColor(text, colorParam);	
+				document.getElementById('modetext').textContent = text;	
 		  	} else {
   		        	modetext.style.color = 'black';
-				document.getElementById('modetext').textContent = setTextColor(text, "#000000");
+				document.getElementById('modetext').textContent = text;
 		    	}
 		  }
 		  else{
