--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		  const buname = url.searchParams.get('name');
 		  const lil = url.searchParams.get('way');
 		  const tos = url.searchParams.get('to');
+		  const he = url.searchParams.get('h');
+		  const we = url.searchParams.get('w');
 		  if (mode === 'text' && text) {
 			if (color) {
   		    		modetext.style.color = color;
@@ -53,6 +55,17 @@
 			  else{
 				  document.getElementById('modetext').textContent = 'There is nothing, please check if your website address is incorrect.';	
 			  }
+		  }
+		  else if (mode == 'picture' && tos){
+			  var img = document.createElement('img');
+  			  img.src = tos;
+  			  if (we){
+				  img.width = we;
+			  }
+			  if (he){
+				  img.height = he;
+			  }
+  			  document.body.appendChild(img);
 		  }
 		  else{
 		    document.getElementById('modetext').textContent = 'There is nothing, please check if your website address is incorrect.';	
