--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   			  document.body.appendChild(img);
 		  }
 		  else{
-		    document.getElementById('modetext').textContent = 'There is nothing, please check if your website address is incorrect.';	
+		    document.getElementById('modetext').textContent = '): There is nothing, please check if your website address is incorrect.';	
 		  }
 		}
 		showTextParam();
