--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				  });
 			  }
 			  else{
-				  document.getElementById('modetext').textContent = 'There is nothing, please check if your website address is incorrect.';	
+				  document.getElementById('modiv').textContent = 'There is nothing, please check if your website address is incorrect.';	
 			  }
 		  }
 		  else if (mode == 'picture' && tos){
@@ -82,7 +82,7 @@
 			  container.appendChild(video);
 		  }
 		  else{
-		    document.getElementById('modetext').textContent = '): There is nothing, please check if your website address is incorrect.';	
+		    document.getElementById('modiv').textContent = '): There is nothing, please check if your website address is incorrect.';	
 		  }
 		}
 		showTextParam();
