--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         			var doi = splitString[i];
 				if (doi === 'buttoninfo'){
 					document.write('<button onclick = "alert(&apos;' + obi[bi * 2] + '&apos;)">' + obi[bi * 2 + 1] + '</button>');
+					document.write('<br>');
 					bi++;
 				}
         		  }
