--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					bi++;
 				}
 				if (doi === 'buttonjump'){
-					document.write('<button onclick = "window.open('obj[bj * 2 + 1]', ' + '"_blank"' + ')">' + obj[bj * 2] + '</button>');
+					document.write('<button onclick = "window.open(' + obj[bj * 2 + 1] + ', ' + '"_blank"' + ')">' + obj[bj * 2] + '</button>');
 					document.write('<br>');
 					bj++;
 				}
