--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					bi++;
 				}
 				if (doi === 'buttonjump'){
-					document.write('<button onclick = "window.open(&quot;' + obj[bj * 2 + 1] + '&quot;, ' + '"_blank"' + ')">' + obj[bj * 2] + '</button>');
+					document.write('<button onclick = "window.open(&apos;' + obj[bj * 2 + 1] + '&apos;, ' + '&apos;_blank&apos;' + ')">' + obj[bj * 2] + '</button>');
 					document.write('<br>');
 					bj++;
 				}
