--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
 					bs++;
 				}
 				if (doi === 'smallinfo'){
-					document.write('<p title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</p>');
-					document.write('<br>');
-					bs++;
+					document.write('<h4 title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</h4>');
+					si++;
 				}
         		  }
 		  }
