--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
 					document.write('<h4 title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</h4>');
 					si++;
 				}
+				if (doi === 'video'){
+					document.write('<img src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></img>');
+					v++;
+				}
+				if (doi === 'picture'){
+					document.write('<img src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></img>');
+					v++;
+				}
         		  }
 		  }
 		  else{
