--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 					si++;
 				}
 				if (doi === 'video'){
-					document.write('<img src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></img>');
+					document.write('<iframe src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></iframe>');
 					v++;
 				}
 				if (doi === 'picture'){
-					document.write('<img src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></img>');
-					v++;
+					document.write('<img src = "' + op[si * 2] + '" title = "' + op[si * 2 + 1] + '"></img>');
+					p++;
 				}
         		  }
 		  }
