--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		  var osi = String(url.searchParams.get('csi')).split(",");
 		  var op = String(url.searchParams.get('cp')).split(",");
 		  var ov = String(url.searchParams.get('cv')).split(",");
+		  var weizhi = String(url.searchParams.get('nvw')).split(",");
 		  if (mode === 'text' && text) {
 			if (color) {
   		    		modiv.style.color = color;
