--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>317's Run Code Get Web</title>
+		<style>
+			.mid{
+				display:flex;
+				justify-content:center;
+				align-items:center;
+			}
+			.left{
+				display:flex;
+				justify-content:left;
+				align-items:center;
+			}
+			.right{
+				display:flex;
+				justify-content:right;
+				align-items:center;
+			}
+		</style>
 	</head>
 	<body>
 	<div id = "modiv"></div>
@@ -105,30 +122,30 @@
 			  for (var i = 0; i < splitString.length; i++) {
         			var doi = splitString[i];
 				if (doi === 'buttoninfo'){
-					document.write('<button onclick = "alert(&apos;' + obi[bi * 2 + 1] + '&apos;)">' + obi[bi * 2] + '</button>');
+					document.write('<button class = "' + weizhi[bi + bj + bs + si + v + p] + '" onclick = "alert(&apos;' + obi[bi * 2 + 1] + '&apos;)">' + obi[bi * 2] + '</button>');
 					document.write('<br>');
 					bi++;
 				}
 				if (doi === 'buttonjump'){
-					document.write('<button onclick = "window.open(&apos;' + obj[bj * 2 + 1] + '&apos;, ' + '&apos;_blank&apos;' + ')">' + obj[bj * 2] + '</button>');
+					document.write('<button class = "' + weizhi[bi + bj + bs + si + v + p] + '" onclick = "window.open(&apos;' + obj[bj * 2 + 1] + '&apos;, ' + '&apos;_blank&apos;' + ')">' + obj[bj * 2] + '</button>');
 					document.write('<br>');
 					bj++;
 				}
 				if (doi === 'bigsmall'){
-					document.write('<h1>' + obs[bs * 2] + '</h1>');
-					document.write('<h3>' + obs[bs * 2 + 1] + '</h3>');
+					document.write('<h1 class = "' + weizhi[bi + bj + bs + si + v + p] + '">' + obs[bs * 2] + '</h1>');
+					document.write('<h3 class = "' + weizhi[bi + bj + bs + si + v + p] + '">' + obs[bs * 2 + 1] + '</h3>');
 					bs++;
 				}
 				if (doi === 'smallinfo'){
-					document.write('<h4 title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</h4>');
+					document.write('<h4 class = "' + weizhi[bi + bj + bs + si + v + p] + '"' + ' title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</h4>');
 					si++;
 				}
 				if (doi === 'video'){
-					document.write('<iframe src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></iframe>');
+					document.write('<iframe class = "' + weizhi[bi + bj + bs + si + v + p] + '" src = "' + ov[si * 2] + '" title = "' + ov[si * 2 + 1] + '"></iframe>');
 					v++;
 				}
 				if (doi === 'picture'){
-					document.write('<img src = "' + op[si * 2] + '" title = "' + op[si * 2 + 1] + '"></img>');
+					document.write('<img class = "' + weizhi[bi + bj + bs + si + v + p] + '" src = "' + op[si * 2] + '" title = "' + op[si * 2 + 1] + '"></img>');
 					p++;
 				}
         		  }
