--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 				justify-content:right;
 				align-items:center;
 			}
+			button {
+			background-color: #123456;
+			border: none;    
+    		color: white;
+			text-align: center;
+			display: inline-block;
+			border-radius:8px;
+			font-size: 15px;
+    	}
 		</style>
 	</head>
 	<body>
