--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				}
 				if (doi === 'smallinfo'){
 					document.write('<span class = "' + weizhi[bi + bj + bs + si + v + p] + '">');
-					document.write('<h4' + ' title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</h4>');
+					document.write('<p' + ' title = "' + osi[si * 2 + 1] + '">' + osi[si * 2] + '</p>');
 					document.write('</span>');
 					si++;
 				}
