--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>317's Run Code Get Web</title>
+		<link href="favicon.ico" rel="icon">
 		<style>
 			.mid{
 				display:flex;
