--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		</style>
 	</head>
 	<body>
+	<noscript><h3>请打开 <code>javascript</code> 再进入此网站！</h3></noscript>
 	<div id = "modiv"></div>
 	<script>
 		function showTextParam() {
