--- a/picshob/index.html
+++ b/picshob/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset = 'UTF-8'>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests;">
+    <title>A Test---Warning!!!---Don't Use It</title>
   </head>
   <body>
     <input type="file" id="imageInput">
