--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 				if (style){
 					modiv.style.fontFamily = style;
 				}
-				document.getElementById('modiv').textContent = text;	
+				document.getElementById('modiv').innerHTML = text;	
 		  	} else {
   		        	modiv.style.color = 'black';
 				if (style){
 					modiv.style.fontFamily = style;
 				}
-				document.getElementById('modiv').textContent = text;
+				document.getElementById('modiv').innerHTML = text;
 		    }
 		  }
 		  else if (mode === 'button' && buname && lil){
